# Smart-Canteen-Waste-Using-ML-Regression-

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py  train_and_save.py
notebooks/: canteen_waste_regression.ipynb
pickle/: ridge_model.pkl  scaler.pkl
